[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/DefaultCamera.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/DefaultMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/BuilderControl.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GameScene.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Canvas.gd" type="Script" id=10]
[ext_resource path="res://Scenes/MobSpawner.gd" type="Script" id=11]

[sub_resource type="Environment" id=3]

[sub_resource type="World" id=4]
environment = SubResource( 3 )

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1117, -144, 0, 0, 0, 0, 1113, 220, 0, 0, 0, 0, 939, 228, 0, 0, 0, 0, 928, 477, 0, 0, 0, 0, 1111, 494, 0, 0, 0, 0, 1112, 921 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 789, 74 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 9 )

[node name="DefaultMap" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 1 )
script = null

[node name="Towers" type="Node2D" parent="."]

[node name="Canvas" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="HUD" parent="Canvas" instance=ExtResource( 2 )]
mouse_filter = 2

[node name="Minimap" type="Control" parent="Canvas"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0

[node name="ViewportContainer" type="ViewportContainer" parent="Canvas/Minimap"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="Canvas/Minimap/ViewportContainer"]
size = Vector2( 150, 150 )
own_world = true
world = SubResource( 4 )
handle_input_locally = false
render_target_update_mode = 3
gui_snap_controls_to_pixels = false

[node name="Camera2D" type="Camera2D" parent="Canvas/Minimap/ViewportContainer/Viewport"]
zoom = Vector2( 4, 4 )

[node name="BuilderControl" type="Control" parent="Canvas"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="MobPath1" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawner" type="Node" parent="."]
script = ExtResource( 11 )

[node name="MobExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobExit"]
position = Vector2( 621, 805 )
shape = SubResource( 2 )

[node name="DefaultCamera" type="Camera2D" parent="."]
position = Vector2( 639, 362 )
current = true
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 2000
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
script = ExtResource( 1 )

[connection signal="start_wave" from="Canvas/HUD" to="." method="_on_HUD_start_wave"]
[connection signal="stop_wave" from="Canvas/HUD" to="." method="_on_HUD_stop_wave"]
[connection signal="progress_changed" from="MobSpawner" to="." method="_on_MobSpawner_progress_changed"]
[connection signal="spawned" from="MobSpawner" to="." method="_on_MobSpawner_spawned"]
[connection signal="body_entered" from="MobExit" to="." method="_on_MobExit_body_entered"]
